# RCBattleShip

./: .gitattributes  GPS  test.c
66AK2L06/: prepare
AM5728/ti-processor-sdk-linux-am57xx-evm-03.02.00.05/: Makefile  Rules.make  cscope.files  cscope.out.REMOVED.git-id  setup.sh  tags.REMOVED.git-id
AM5728/ti-processor-sdk-linux-am57xx-evm-03.02.00.05/board-support/extra-drivers/cmem-mod-4.12.00.00+gitAUTOINC+d6d3e84c84/: .gitignore  Android.mk  Makefile.am  Makefile.in  configure  configure.ac  lu.mak  products.mak
AM5728/ti-processor-sdk-linux-am57xx-evm-03.02.00.05/board-support/extra-drivers/cmem-mod-4.12.00.00+gitAUTOINC+d6d3e84c84/src/cmem/: README
AM5728/ti-processor-sdk-linux-am57xx-evm-03.02.00.05/board-support/extra-drivers/cmem-mod-4.12.00.00+gitAUTOINC+d6d3e84c84/src/cmem/api/: Makefile.am  Makefile.in  cmem.c
AM5728/ti-processor-sdk-linux-am57xx-evm-03.02.00.05/board-support/extra-drivers/cmem-mod-4.12.00.00+gitAUTOINC+d6d3e84c84/src/cmem/module/: cmemk.c
AM5728/ti-processor-sdk-linux-am57xx-evm-03.02.00.05/board-support/extra-drivers/cmem-mod-4.12.00.00+gitAUTOINC+d6d3e84c84/src/cmem/module/kernel/Documentation/device-tree/bindings/cmem/: ti,cmem.txt
AM5728/ti-processor-sdk-linux-am57xx-evm-03.02.00.05/board-support/extra-drivers/cmem-mod-4.12.00.00+gitAUTOINC+d6d3e84c84/src/cmem/module/kernel/drivers/: Makefile
AM5728/ti-processor-sdk-linux-am57xx-evm-03.02.00.05/board-support/extra-drivers/cmem-mod-4.12.00.00+gitAUTOINC+d6d3e84c84/src/cmem/module/kernel/drivers/cmem/: Makefile  cmemk_stub.c
AM5728/ti-processor-sdk-linux-am57xx-evm-03.02.00.05/board-support/extra-drivers/cmem-mod-4.12.00.00+gitAUTOINC+d6d3e84c84/src/cmem/module/kernel/include/linux/: cmemk_stub.h
AM5728/ti-processor-sdk-linux-am57xx-evm-03.02.00.05/board-support/extra-drivers/cmem-mod-4.12.00.00+gitAUTOINC+d6d3e84c84/src/cmem/tests/: Makefile.am  Makefile.in  apitest.c  multi_process.c  translate.c
AM5728/ti-processor-sdk-linux-am57xx-evm-03.02.00.05/docs/: Processor_SDK_Linux_Getting_Started_Guide.txt  software_manifest.htm  software_manifest.txt
AM5728/ti-processor-sdk-linux-am57xx-evm-03.02.00.05/filesystem/: .gitattributes  tisdk-rootfs-image-am57xx-evm.tar.xz  tisdk-rootfs-image-am57xx-evm.tar.xz.REMOVED.git-id
AM5728/ti-processor-sdk-linux-am57xx-evm-03.02.00.05/linux-devkit/: environment-setup  site-config-armv7ahf-neon-linux-gnueabi  (+1 more)
AWR1642/: prepare
Cortex-R5F/: prepare
Cortex-R5F/.metadata/: version.ini
Cortex-R5F/MCU_proj/: .ccsproject  .cproject  .project  MCU_proj.dil  MCU_proj.hcg
Doc/Circuit/: LM317해석.docx  am_fm.txt  lm5122.txt  prepare
Doc/DeviceDriver/: pinctrl.txt  usb - chipidea
Doc/OrganDoc/: 2.ProcessorSDKLinuxTraining.docx.docx  2017-05-22 포 구현 조사.txt  2_Dsp-리눅스트레이닝.docx  AM5728(DSP) 전용 App 만들기  DSP 리눅스 커널 소스 드라이빙 환경 구축 (사진 없음).odp  DSP_REBOOT_LOG  Device_Tree_Usage.txt  Field Oriented Control Theory  FreeRTOS_RM.txt  I2C_MPU6050.pptx  LinuxMedia.odt  MAXSURF.docx  MCU_BootingCompilingUploading  MCU_CCS+Driver+HALCoGen.odt  Mastering_FreeRTOS_RTK.txt  Open Drain,Collector.docx  Part1.CATPart  Part2.CATPart  README_Install to MCUDriver(CCS+HALCoGen).docx  Speed Control of PMBLDC Motor with the Help of PI Controller.docx  Step-Down Converter with Cable Voltage Drop Compen  TechspecArduinoProducts.docx  TechspecArduinoUno.docx  URB  Using_Developed_IP_Core_in_Vivado_Design_Suite.txt  Zynq_Book_Tutorial.txt  [FPGA_CAN]SocketCan_번역  am_fm.txt  can2spec_unlock_번역.docx  can2spec_번역(ing)  device_tree.txt  how_to_configure_USB_serial_adapters_in_Linux.txt  learn_solder.txt  link_info.txt  matrix_guide.txt  prepare  wlan_summary.txt  깃허브오류시파일삭제하는방법
Doc/RM57L843/: ch1.txt
Doc/Zybo/: 데이터시트 14장.txt
Doc/motor_control/: Analysis_of_the_Transfer_Function_Models_of_Electric_Drives_with_Controlled_Voltage_Source  ESCCalibration.docx  prepare
Doc/ship_dynamic/: quaternion_interpolation_n_anim.txt  ship_dynamics_in_waves
Doc/water_rocket/: Hydrodynamics_of_a_Water_Rocket.txt  bottle_rocket_calculation.txt  guide_to_building_and_understanding_the_physics_of_Water_Rocket.txt  modeling_and_optimisation_of_multi-stage_water_rockets.txt  modeling_water_rocket.txt  physics_and_model_rockets  prepare  understanding_the_physics_of_water_rockets_using_wireless_sensors.txt  water_rocket_example.txt
HackRF/: prepare
TMS320C6678/: prepare
TMS320F28069/: prepare
ZedBoard/: prepare
Zybo/: gpio-zynq.c  i2c-cadence.c  prepare  xilinx_fpga_zynq_api_descriptions.c
Zybo/apps/: i2c_LiDAR_fn.c  mpu6050_gyro_sensing.c  test_i2c_app.c  test_i2c_app_f.c
android/: prepare
experiment/: prepare
experiment/char_set/: ascii_to_unicode.c  unicode_to_ascii.c
experiment/control_theory/: KAL.h  Makefile  _Variable.h  compile.txt  pid.c  quad_kal.c  this_kalman.c
experiment/delay_work/: delay_work.c
experiment/dsp/: prepare
experiment/lsp/: Makefile  basic_client.c  basic_server  basic_server.c  block_client  block_client.c  block_server  block_server.c
experiment/math/: Makefile  compile.txt  matrix3d.c  matrix3d.h  quaternion.c  quaternion.h  quaternion_test.c  rotation_test.c  vector3d.c  vector3d.h  vector_test  vector_test.c
experiment/mcu/: perpare
experiment/module_param/: mod_param.c
experiment/opencv/: .face_detect.cpp.swp  Gaussian_otsu_test.cpp  Redobjtrack.cpp  camera.cpp  kangcvtest.cpp  kangopentest.cpp  prepare  threshold.cpp  영상 추적 기본 개념 이론
experiment/statistics/: binom2gauss_approx.c  binom2poisson_approx.c  binomial_dist.c  compile.txt  cond_prob.c  confidence_interval_normalize.c  expectation.c  gauss_dist.c  gauss_dist_add.c  geometric_dist.c  hypothesis_test.c  linear_expect.c  mean.c  permu_comb.c  poisson2gauss_approx.c  poisson_comb.c  poisson_dist.c  prob.c  prob_struct.c  quartile.c  sample_prob.c  sample_var.c  t_dist.c  variance.c
experiment/water_rocket_physics/: first_model.c  prepare  water_rocket_simulation.c  water_rocket_simulation.h
experiment/zynq/: petalinux 설치방법.odt  prepare
pmsm_TMS570LS1227/: prepare
smart_vision/: prepare
wlan_patch/: build-wilink.sh  kernel_tisdk_am57xx-evm_defconfig
(+8271 files in other folders)
